Add a second way of accomplishing the task by structuring models better

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
             android:layout_marginEnd="32dp"
             android:ems="10"
             android:inputType="textNoSuggestions|textEmailAddress"
-            android:text="@={model.login.email}"
+            android:text="@={model.login.fields.email}"
             app:error="@{model.login.emailError}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,7 +61,7 @@
             android:layout_marginEnd="32dp"
             android:ems="10"
             android:inputType="textPassword"
-            android:text="@={model.login.password}"
+            android:text="@={model.login.fields.password}"
             app:error="@{model.login.passwordError}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtEmail"
